Added Google Maps

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -21,6 +21,20 @@
  
   <p>
     <button ion-button (click)="clearCache()">Clear FirstStart</button>
-  </p>
+  </p>  
+
+      <div>
+          <div style="display: block">
+            <canvas baseChart
+                    [datasets]="barChartData"
+                    [labels]="barChartLabels"
+                    [options]="barChartOptions"
+                    [legend]="barChartLegend"
+                    [chartType]="barChartType"
+                    (chartHover)="chartHovered($event)"
+                    (chartClick)="chartClicked($event)"></canvas>
+          </div>
+          <button (click)="randomize()">Update</button>
+        </div>
 
 </ion-content>
