--- a/src/pages/geolocation/geolocation.html
+++ b/src/pages/geolocation/geolocation.html
@@ -1,14 +1,14 @@
 <ion-header>
+
     <ion-navbar>
-      <ion-title>
-        Map
-      </ion-title>
+      <ion-title>Location</ion-title>
     </ion-navbar>
+  
   </ion-header>
    
 
   <ion-content>
-    <agm-map [latitude]="lat" [longitude]="lng">
+    <agm-map [latitude]="lat" [longitude]="lng" [zoom]="zoom">
       <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
     </agm-map>
     </ion-content>
