--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,10 +1,11 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title></ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
+
   <h2>Welcome to Ionic!</h2>
   <p>
     This starter project comes with simple tabs-based layout for apps
@@ -15,26 +16,12 @@
     update any existing page or create new pages.
   </p>
 
-  <p>
+  <p>Date:
     {{ date | date : format : timezone}} <!-- https://docs.angularjs.org/api/ng/filter/date -->
   </p>
  
   <p>
     <button ion-button (click)="clearCache()">Clear FirstStart</button>
   </p>  
-
-      <div>
-          <div style="display: block">
-            <canvas baseChart
-                    [datasets]="barChartData"
-                    [labels]="barChartLabels"
-                    [options]="barChartOptions"
-                    [legend]="barChartLegend"
-                    [chartType]="barChartType"
-                    (chartHover)="chartHovered($event)"
-                    (chartClick)="chartClicked($event)"></canvas>
-          </div>
-          <button (click)="randomize()">Update</button>
-        </div>
 
 </ion-content>
