--- a/src/pages/geolocation/geolocation.html
+++ b/src/pages/geolocation/geolocation.html
@@ -1,7 +1,7 @@
 <ion-header>
 
     <ion-navbar>
-      <ion-title>Location</ion-title>
+      <ion-title></ion-title>
     </ion-navbar>
   
   </ion-header>
