--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -1,18 +1,17 @@
-<!--
-  Generated template for the SettingsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
-    <ion-title>settings</ion-title>
+    <ion-title></ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+  <ion-list>
+    <ion-item>
+      <ion-label>Receive notifications?</ion-label>
+      <ion-toggle></ion-toggle>
+    </ion-item>
+  </ion-list>
 </ion-content>
