--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -11,7 +11,7 @@
   <ion-list>
     <ion-item>
       <ion-label>Receive notifications?</ion-label>
-      <ion-toggle></ion-toggle>
+      <ion-toggle [(ngModel)]="toggleReceiveNotificationsStatus" (ionChange)="toggleReceiveNotifications()"></ion-toggle>
     </ion-item>
   </ion-list>
 </ion-content>
