Readded IOS platform, added local notification plugin: https://ionicframework.com/docs/native/local-notifications/

--- a/src/pages/introslides/introslides.html
+++ b/src/pages/introslides/introslides.html
@@ -1,7 +1,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Vebruiksmanager</ion-title>
+    <ion-title>Verbruiksmanager</ion-title>
       <ion-buttons end>
         <button ion-button (click)="openTabsPage()" color="primary">Skip</button>
       </ion-buttons>
