tried to fix --livereload remove and readded IONIC CORDOVA, platform ANDROID, IOS and BROWSER, removed plugins phonegap-plugin-push and cordova-plugin-device-motion

--- a/src/pages/more/more.html
+++ b/src/pages/more/more.html
@@ -28,9 +28,7 @@
     </ion-item>
     <ion-item>
       <ion-icon name="information-circle" item-start></ion-icon>
-      <ion-note>
-        {{appName}}, Version: {{appVersionNumber}}
-      </ion-note>
+        Version: {{appVersionNumber}}
     </ion-item>    
   </ion-list>
 </ion-content>
