Added left right swiping for naviagtion to change tabs pages

--- a/src/pages/chart/chart.html
+++ b/src/pages/chart/chart.html
@@ -23,8 +23,13 @@
 
 
 
-<ion-content padding>
+  <ion-content (swipe)="swipeEvent($event)" padding>
 
+<p>Lol kek bur!</p>
+<p>Lol kek bur!</p>
+<p>Lol kek bur!</p>
+<p>Lol kek bur!</p>
+<p>Lol kek bur!</p>
 
   <div [ngSwitch]="interval">
     <ion-list *ngSwitchCase="'day'">
