--- a/src/pages/more/more.html
+++ b/src/pages/more/more.html
@@ -1,13 +1,13 @@
-<ion-header>
+<!-- <ion-header>
 
   <ion-navbar>
     <ion-title></ion-title>
   </ion-navbar>
 
-</ion-header>
+</ion-header> -->
 
 
-<ion-content>
+<ion-content (swipe)="swipeEvent($event)">
   <ion-list >
     <ion-item (click)="openSettingsPage()">
         <ion-icon name="settings" item-start></ion-icon>
