--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,11 +1,11 @@
-<ion-header>
+<!-- <ion-header>
   <ion-navbar>
     <ion-title></ion-title>
   </ion-navbar>
-</ion-header>
+</ion-header> -->
 
-<ion-content>
-  <p>< ></p>
+<ion-content (swipe)="swipeEvent($event)" padding>
+  <!-- <p>< ></p> -->
 
   <ion-refresher (ionRefresh)="doRefresh($event)">
     <ion-refresher-content
@@ -77,10 +77,10 @@
         <section id="skills" class="toad-fullscreen">
              <article class="skills">
                  <div class="t-6">
-                     <p>Power used<span></span><span class="skills"></span></p>
+                     <p>Power used<span class="powerusedbar"></span><span class="skills" style="width: 85%"></span></p>
                  </div>
                  <div class="t-6">
-                     <p>Power produced<span></span><span class="skills"></span></p>
+                     <p>Power produced<span class="powerproducedbar"></span><span class="skills" style="width: 15%"></span></p>
                  </div>
              </article>
          </section>
