--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,10 +1,10 @@
-<!-- <ion-header>
+<ion-header>
   <ion-navbar>
     <ion-title></ion-title>
   </ion-navbar>
-</ion-header> -->
+</ion-header>
 
-<ion-content (swipe)="swipeEvent($event)" padding>
+<ion-content (swipe)="swipeEvent($event)" padding class="greyish">
   <!-- <p>< ></p> -->
 
   <ion-refresher (ionRefresh)="doRefresh($event)">
