--- a/src/pages/more/more.html
+++ b/src/pages/more/more.html
@@ -1,10 +1,10 @@
-<!-- <ion-header>
+<ion-header>
 
   <ion-navbar>
     <ion-title></ion-title>
   </ion-navbar>
 
-</ion-header> -->
+</ion-header>
 
 
 <ion-content (swipe)="swipeEvent($event)">
