--- a/src/pages/chart/chart.html
+++ b/src/pages/chart/chart.html
@@ -24,14 +24,23 @@
 
   <ion-content (swipe)="swipeEvent($event)" padding>
 
+      <ion-card>
+          <ion-card-header>
+            Line Chart
+          </ion-card-header>
+          <ion-card-content>
+            <canvas #lineCanvas></canvas>
+          </ion-card-content>
+        </ion-card>
+    
   <div [ngSwitch]="interval">
     <ion-list *ngSwitchCase="'day'">
         <!-- {{dataDay}} -->
-        <chart [options] = "chartOptionsDaily" style="display: block" type = "chart"> </chart>
+        <!-- <chart [options] = "chartOptionsDaily" style="display: block" type = "chart"> </chart> -->
     </ion-list>
     <ion-list *ngSwitchCase="'month'">
         <!-- {{datamonth}} -->
-        <chart [options] = "chartOptionsMonthly" style="display: block" type = "chart"> </chart>
+        <!-- <chart [options] = "chartOptionsMonthly" style="display: block" type = "chart"> </chart> -->
       <!-- <ion-item *ngFor="let user of users">
         <h2>{{user.name}}</h2>
         <p>{{user.email}}</p>
@@ -39,7 +48,7 @@
     </ion-list>
     <ion-list *ngSwitchCase="'year'">
       <!-- {{dataYearly}} -->
-      <chart [options] = "chartOptionsYearly" style="display: block" type = "chart"> </chart>
+      <!-- <chart [options] = "chartOptionsYearly" style="display: block" type = "chart"> </chart> -->
       <!-- <ion-item *ngFor="let c of countries">
         <ion-avatar item-left>
           <img src="{{c.flag}}">
@@ -50,7 +59,7 @@
     </ion-list>
     <ion-list *ngSwitchCase="'overall'">
       <!-- {{dataOverall}} -->
-      <chart [options] = "chartOptionsOverall" style="display: block" type = "chart"> </chart>
+      <!-- <chart [options] = "chartOptionsOverall" style="display: block" type = "chart"> </chart> -->
     </ion-list>
   </div>   
 
